syntax = "proto3";

package aether.registrar.v1;

option go_package = "github.com/bpalermo/aether/api/aether/registrar/v1;registrarv1";

service RegistrarService {
  rpc Subscribe(stream SubscribeRequest) returns (stream SubscribeResponse) {}
}

message SubscribeRequest {
  string proxy_id = 1;
}

message SubscribeResponse {
}
