syntax = "proto3";

package aether.registry.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/bpalermo/aether/api/aether/registry/v1;registryv1";

message ServiceEndpoint {

  string ip = 1 [(buf.validate.field).string.min_len = 1];

  string cluster_name = 2 [(buf.validate.field).string.min_len = 1];

  uint32 port = 3 [(buf.validate.field).uint32.lte = 65535];

  uint32 weight = 4 [(buf.validate.field).uint32.gte = 0];

  message Locality {
    string region = 1;
    string zone = 2;
  }

  Locality locality = 5;

  map <string, string> metadata = 6;

  message ContainerMetadata {
    string container_id = 1 [(buf.validate.field).string.min_len = 1];
    string network_namespace = 2 [(buf.validate.field).string.min_len = 1];
  }

  ContainerMetadata container_metadata = 7;

  message KubernetesMetadata {
    string namespace = 1 [(buf.validate.field).string.min_len = 1];
    string pod_name = 2 [(buf.validate.field).string.min_len = 1];
  }

  KubernetesMetadata kubernetes_metadata = 8;
}
